@@ -16,14 +16,12 @@
 #include "doge-i.h"
 
 using innocent_pear::impl::uintptr_t;
+using innocent_pear::impl::ops_flags_t;
+using namespace innocent_pear::ops;
 
 extern unsigned char our_text_start[]
     __asm("_.innocent_pear.text.start");
 extern unsigned char our_text_end[] __asm("_.innocent_pear.text.end");
-
-static constexpr innocent_pear::impl::ops_flags_t flags =
-    innocent_pear::ops::allow_for_startup |
-    innocent_pear::ops::under_munged_terminal;
 
 innocent_pear_HERE_START
 innocent_pear_NEXT
@@ -34,6 +32,8 @@ extern const unsigned char startup_text_start[0]
 
 innocent_pear_DOGE unscramble_02_1()
 {
+	static constexpr ops_flags_t flags =
+	    (ops_flags_t)(allow_for_startup | under_munged_terminal);
 	unsigned char *nxs = next_start, *nxe = next_end,
 	    *ts = our_text_start, *te = our_text_end;
 	innocent_pear_CHAFF(flags);
@@ -48,5 +48,7 @@ innocent_pear_DOGE unscramble_02_1()
 
 innocent_pear_DOGE_MEMSET unscramble_02_2()
 {
+	static constexpr ops_flags_t flags =
+	    (ops_flags_t)(allow_for_startup | under_munged_terminal);
 	innocent_pear::rofl?<flags>::memset((void *)here_start);
 }
