@@ -13,13 +13,11 @@
 #include "doge-i.h"
 
 using innocent_pear::impl::uintptr_t;
+using innocent_pear::impl::ops_flags_t;
+using innocent_pear::ops;
 
 extern unsigned char dogecoin_start[] __asm("_.innocent_pear.dogecoin.start");
 extern unsigned char dogecoin_end[] __asm("_.innocent_pear.dogecoin.end");
-
-static constexpr innocent_pear::impl::ops_flags_t flags =
-    innocent_pear::ops::allow_for_startup |
-    innocent_pear::ops::under_munged_terminal;
 
 innocent_pear_HERE_START
 innocent_pear_NEXT
@@ -83,6 +81,8 @@ class dogecoin_t
 
 innocent_pear_DOGE unscramble_06_1()
 {
+	static constexpr ops_flags_t flags =
+	    (ops_flags_t)(allow_for_startup | under_munged_terminal);
 	unsigned char *nxs = next_start, *nxe = next_end;
 	innocent_pear_CHAFF(flags);
 	innocent_pear::orly<innocent_pear_DOGE_STATE_9,
@@ -99,5 +99,7 @@ innocent_pear_DOGE unscramble_06_1()
 
 innocent_pear_DOGE_MEMSET unscramble_06_2()
 {
+	static constexpr ops_flags_t flags =
+	    (ops_flags_t)(allow_for_startup | under_munged_terminal);
 	innocent_pear::rofl?<flags>::memset((void *)here_start);
 }
